CRUDs (marcas, equipos, tipo_equipos, estados_equipo)

--- a/WebApiPractica/appsettings.json
+++ b/WebApiPractica/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "equiposDbConnection": "Dta Source = LOCALHOST; Initial Catalog = equipos; User id = sa; Password = contra123; Connect Timeout = 120; Encrypt = False "
+    "equiposDbConnection": "Data Source = LOCALHOST; Initial Catalog = equipos; User id = sa; Password = contra123; Connect Timeout = 120; Encrypt = False "
   },
 
   "Logging": {
